# MouthSpriteExtractor-SAM3

./: .gitignore  README.md  gui.py  mouth_sprite_extractor.py  pyproject.toml  requirements.txt  sam3_detector.py
